common: Fix initialization of GsdDeviceMapper

Commit a73c5903ac introduced async GnomeRRScreen initialization but
didn't cover all initialization scenarios. In the lowlevel functions,
g_return_if_fail() is called if there is no GnomeRRScreen yet, and
in the higher level functions, just check for it not being NULL. After
the screen initialization, _device_mapper_update_outputs() will be
called, which will catch up mapping every previously added input device.

https://bugzilla.gnome.org/show_bug.cgi?id=726807